2010-05-28 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: added more intervals
	for the period (5 days, 15 days and 1 month) and removed tiny intervals.

2010-05-27 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_api.php: added new calls for api
	"set_new_alert_template", "set_delete_module", "set_new_module", 
	"set_alert_actions", "set_new_event", "set_event_validate_filter_pro",
	"set_event_validate_filter" and "get_events". Added support function
	"otherParameter2Filter".

2010-05-27 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_api.php, include/api.php: cleaned and organice the
	source code.

2010-05-27  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager/main.php: Show an error instead of
	  'updating...' if a non-enterprise user tries to update.

2010-05-27  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Improved the speed of chart drawing algorithms.

2010-05-27  Sergio Martin <sergio.martin@artica.es>

	* operation/users/user_edit.php: Fixed the message
	over the header for bug: 3007803 

2010-05-27 Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/tactical.php: Give some colour to the data shown.

	* godmode/menu.php: Updated year.	

2010-05-26 Miguel de Dios  <miguel.dedios@artica.es>

	* include/help/es/help_gis_map_builder.php,
	general/license/pandora_info_pt_br.html: fixed close open tags, the eclipse
	searched this bugs and advised me.

2010-05-26 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/menu.php: added hook for the submenu enterprise in the reporting.

2010-05-26  Junichi Satoh  <junichi@rworks.jp>

	* include/gettext.php: Changed the function to use. ereg() is
	deprecated by php 5.3.

2010-05-25 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/agentes/module_manager.php, modificar_agente.php: Added some
	nice icons to buttons.

2010-05-25 Raúl Mateos <raulofpandora@gmail.com>
