@@ -1,3 +1,14 @@
+2010-05-31  Sergio Martin <sergio.martin@artica.es>
+
+	* images/cog_del.png
+	godmode/agentes/massive_add_alerts.php
+	godmode/agentes/massive_delete_action_alerts.php
+	godmode/agentes/massive_operations.php
+	godmode/agentes/massive_add_action_alerts.php: Added the alert massive
+	operations 'add alerts', 'add actions' and 'delete actions'.
+	An icon to delete actions added too.
+	All for pending task: 3004606
+
 2010-05-28 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* godmode/reporting/reporting_builder.item_editor.php: added more intervals
